Feature/fix sameday pt (#1139)
* FWPM:-2149: Rename route consumer dto

* FWPM:-2149: json alias to route consumer dto. Flow Logistic Center Validation :white_check_mark:

* FWPM:-2149: json alias to route consumer dto. Flow Logistic Center Validation :white_check_mark:

* FWPM:-2149: json alias to route consumer dto. Flow Logistic Center pattern matcher Validation :white_check_mark: comments

* Added handling for same day cpt in arba01

* :ambulance: Added handling for same day cpt in arba01 :white_check_mark:

* :ambulance: Added handling for same day cpt in arba01 :white_check_mark:

* :ambulance: Added handling for same day cpt in arba01 :white_check_mark:

* :ambulance: Added handling for same day cpt in arba01 :white_check_mark: